# trading-api2

./: .gitignore  CMakeLists.txt  buildall.sh  clangformatter.sh  deps-install.sh
backtester/exe/: CMakeLists.txt  main.cpp
trading-api2/: CMakeLists.txt  buildscript.sh  clangformatter.sh  run_ut.sh
trading-api2/accounting/: CMakeLists.txt
trading-api2/accounting/include/: AccountDetails.h  IAccountManager.h  IOrdersManager.h
trading-api2/accounting/src/: AccountDetails.cpp
trading-api2/charting/: CMakeLists.txt
trading-api2/charting/include/: CandleStick.h  ChartData.h  ChartData2.h  ChartData3.h  ICandleStick.h  IOrderbook.h  IndicatorTypes.h  MultiCandle.h  MultiChartUpdater.h  MultiChartUpdaterServicable.h  Option.h  Orderbook.h  ta-lib-wrapper.h
trading-api2/charting/src/: CandleStick.cpp  ChartData.cpp  ChartData2.cpp  ChartData3.cpp  IndicatorTypes.cpp  Orderbook.cpp  ta-lib-wrapper.cpp
trading-api2/charting/ut/: CMakeLists.txt  ChartData3Test.cpp  ta-lib-wrapper-test.cpp
trading-api2/configs/: CMakeLists.txt
trading-api2/configs/include/: SchwabConfigs.h
trading-api2/configs/mocks/: CMakeLists.txt  SchwabConfigsMock.h
trading-api2/configs/src/: SchwabConfigs.cpp
trading-api2/configs/ut/: CMakeLists.txt  SchwabConfigsTest.cpp  influx_connection.json  schwab_subscription.json
trading-api2/connection_manager/: CMakeLists.txt
trading-api2/connection_manager/include/: SchwabConnectionManager.h
trading-api2/connection_manager/src/: SchwabConnectionManager.cpp
trading-api2/connection_manager/ut/: CMakeLists.txt  SchwabConnectionManagerTest.cpp
trading-api2/databank/: CMakeLists.txt
trading-api2/databank/include/: ChartAggregatorTypes.h  ChartsAggregator.h  Databank.h  IDatabank.h  SchwabDatabank.h  SchwabJsonDataRecorder.h
trading-api2/databank/src/: ChartsAggregator.cpp  Databank.cpp  SchwabDatabank.cpp  SchwabJsonDataRecorder.cpp
trading-api2/databank/ut/: CMakeLists.txt  ChartsAggregatorTest.cpp  SchwabDatabankTest.cpp
trading-api2/database/: CMakeLists.txt
trading-api2/database-handlers/: CMakeLists.txt
trading-api2/database-handlers/include/: IDatabaseHandler.h  SchwabDatabaseHandler.h
trading-api2/database-handlers/mocks/: CMakeLists.txt  DatabaseHandlerMock.h
trading-api2/database-handlers/src/: SchwabDatabaseHandler.cpp
trading-api2/database-handlers/ut/: CMakeLists.txt  SchwabDatabaseHandlerTest.cpp
trading-api2/database/include/: InfluxDbPusher.h
trading-api2/database/mocks/: CMakeLists.txt  InfluxDbPusherMock.cpp  InfluxDbPusherMock.h
trading-api2/database/src/: InfluxDbPusher.cpp
trading-api2/database/ut/: CMakeLists.txt  InfluxDbTests.cpp
trading-api2/endpoint_tests/: main.cpp
trading-api2/endpoint_tests/include/: SchwabEndpointsTest.h
trading-api2/exchange-datatypes/: CMakeLists.txt
trading-api2/exchanges/: CMakeLists.txt
trading-api2/executables/: CMakeLists.txt
trading-api2/executables/alpacatest/: CMakeLists.txt  alpacatest.cpp
trading-api2/executables/databank-scraping/: CMakeLists.txt  main.cpp
trading-api2/executables/libcurlposttest/: CMakeLists.txt  libcurlposttest.cpp
trading-api2/executables/libcurltest/: CMakeLists.txt  libcurltest.cpp
trading-api2/executables/schwab-auth-test/: CMakeLists.txt  Makefile  cmake_install.cmake  schwab-auth-test.cpp
trading-api2/executables/servicestart/: CMakeLists.txt  main.cpp
trading-api2/executables/tradiertest/: CMakeLists.txt  tradiertest.cpp
trading-api2/executables/twslivemarket/: CMakeLists.txt  twslivemarket.cpp
trading-api2/executables/websockets/: CMakeLists.txt  schwabsocket.cpp
trading-api2/logging/: CMakeLists.txt
trading-api2/logging/mocks/: CMakeLists.txt
trading-api2/logging/src/: Logger.cpp
trading-api2/mytwsapi/: CMakeLists.txt
trading-api2/mytwsapi-imp/: CMakeLists.txt
trading-api2/mytwsapi-imp/include/: EWrapperBaseImp.h  EWrapperFuncStructs.h
trading-api2/mytwsapi-imp/src/: EWrapperBaseImp.cpp
trading-api2/mytwsapi-service/: CMakeLists.txt
trading-api2/mytwsapi-service/include/: ITwsClientWrapper.h  LiveMarketHandler.h  MarketDataSingleton.h  ReqIdTypes.h  TwsClientWrapper.h  TwsLiveMarketService.h
trading-api2/mytwsapi-service/mocks/: EWrapperMock.h  TwsClientWrapperMock.h
trading-api2/mytwsapi-service/src/: LiveMarketHandler.cpp  MarketDataSingleton.cpp  TwsClientWrapper.cpp  TwsLiveMarketService.cpp
trading-api2/mytwsapi/client/: CMakeLists.txt
trading-api2/output/: CMakeCache.txt  Makefile  cmake_install.cmake
trading-api2/output/charting/: Makefile  cmake_install.cmake
trading-api2/output/exchanges/: Makefile  cmake_install.cmake
trading-api2/output/executables/: Makefile  cmake_install.cmake
trading-api2/output/mytwsapi/: Makefile  cmake_install.cmake
trading-api2/output/mytwsapi-imp/: Makefile  cmake_install.cmake
trading-api2/output/mytwsapi-service/: Makefile  cmake_install.cmake
trading-api2/output/restclient/: Makefile  cmake_install.cmake
trading-api2/output/streaming/: Makefile  cmake_install.cmake
trading-api2/output/tests/: Makefile  cmake_install.cmake
trading-api2/output/utils/: Makefile  cmake_install.cmake
trading-api2/restclient/: CMakeLists.txt
trading-api2/restclient/include/: CurlWrapperFuncs.h  IRestClient.h  IRestClientCurl.h  RestClient.h  RestClientCurl.h
trading-api2/restclient/mocks/: CMakeLists.txt  CurlWrapperFuncsMock.cpp  CurlWrapperFuncsMock.h  RestClientCurlMock.h  RestClientMock.h
trading-api2/restclient/src/: CurlWrapperFuncs.cpp  RestClient.cpp  RestClientCurl.cpp
trading-api2/restclient/ut/: CMakeLists.txt  RestClientCurlTest.cpp
trading-api2/service/: CMakeLists.txt
trading-api2/service/system-tests/: AggregateDBCandlesTest.cpp  CMakeLists.txt  SchwabDatabankRealDataTest.cpp
trading-api2/streaming/: CMakeLists.txt
trading-api2/streaming/include/: AlpacaStreamHandler.h  AlpacaStreamParser.h  IEasyStreamHandler.h  IStreamHandler.h  (+6 more)
trading-api2/tests/: CMakeLists.txt  main.cpp
trading-api2/uWebSockets-v0.14/: CMakeLists.txt
trading-api2/unit_tests/: CMakeLists.txt  main.cpp
trading-api2/utils/: CMakeLists.txt
(+183 files in other folders)
